@@ -16,8 +16,12 @@
  */
 package org.keycloak.operator;
 
+import org.keycloak.operator.crds.v2alpha1.deployment.ValueOrSecret;
+
+import java.util.Collections;
+import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.TreeMap;
 
 public final class Constants {
     public static final String CRDS_GROUP = "k8s.keycloak.org";
@@ -25,29 +29,31 @@ public final class Constants {
     public static final String SHORT_NAME = "kc";
     public static final String NAME = "keycloak";
     public static final String PLURAL_NAME = "keycloaks";
+    public static final String INSTANCE_LABEL = "app.kubernetes.io/instance";
     public static final String MANAGED_BY_LABEL = "app.kubernetes.io/managed-by";
     public static final String MANAGED_BY_VALUE = "keycloak-operator";
     public static final String COMPONENT_LABEL = "app.kubernetes.io/component";
-    public static final String KEYCLOAK_COMPONENT_LABEL = "keycloak.org/component";
+    public static final String KEYCLOAK_COMPONENT_LABEL = "operator.keycloak.org/component";
 
-    public static final Map<String, String> DEFAULT_LABELS = Map.of(
+    public static final Map<String, String> DEFAULT_LABELS = Collections.unmodifiableMap(new TreeMap<>(Map.of(
             "app", NAME,
             MANAGED_BY_LABEL, MANAGED_BY_VALUE
+    )));
+
+    public static final String DEFAULT_LABELS_AS_STRING = Utils.toSelectorString(DEFAULT_LABELS);
+
+    public static final List<ValueOrSecret> DEFAULT_DIST_CONFIG_LIST = List.of(
+            new ValueOrSecret("health-enabled", "true"),
+            new ValueOrSecret("cache", "ispn"),
+            new ValueOrSecret("cache-stack", "kubernetes"),
+            new ValueOrSecret("proxy", "passthrough")
     );
 
-    public static final String DEFAULT_LABELS_AS_STRING = DEFAULT_LABELS.entrySet().stream()
-            .map(e -> e.getKey() + "=" + e.getValue())
-            .collect(Collectors.joining(","));
-
-    public static final Map<String, String> DEFAULT_DIST_CONFIG = Map.of(
-        "health-enabled","true",
-        "cache", "ispn",
-        "cache-stack", "kubernetes",
-        "proxy", "passthrough"
-    );
 
     public static final Integer KEYCLOAK_HTTP_PORT = 8080;
     public static final Integer KEYCLOAK_HTTPS_PORT = 8443;
+    public static final String KEYCLOAK_HTTP_PORT_NAME = "http";
+    public static final String KEYCLOAK_HTTPS_PORT_NAME = "https";
     public static final String KEYCLOAK_SERVICE_PROTOCOL = "TCP";
     public static final String KEYCLOAK_SERVICE_SUFFIX = "-service";
     public static final Integer KEYCLOAK_DISCOVERY_SERVICE_PORT = 7800;
